test/libsolidity/syntaxTests/constructor/library_constructor_new.sol
library Lib {
	constructor();
}
// ----
// TypeError: (15-29): Constructor cannot be defined in libraries.
// TypeError: (15-29): Constructor must be implemented if declared.
